--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             rel="stylesheet">
         <title>Document</title>
 
-        <link rel="stylesheet" href="/reset.css">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
@@ -1004,6 +1004,6 @@
             </section>
         </main>
 
-        <script src="/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
