--- a/index.html
+++ b/index.html
@@ -489,11 +489,11 @@
                                         </button>
                                         <div class="dropdown-content">
                                             <a class="dropdown-content__item"
-                                                href="#">ИгроМИР</a>
+                                                href="#">Акции 1</a>
                                             <a class="dropdown-content__item"
-                                                href="#">Мероприятия</a>
+                                                href="#">Акции 2</a>
                                             <a class="dropdown-content__item"
-                                                href="#">Мастер-классы</a>
+                                                href="#">Акции 3</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -516,9 +516,9 @@
                                             </p>
                                         </button>
                                         <div class="dropdown-content">
-                                            <a href="#">ИгроМИР</a>
-                                            <a href="#">Мероприятия</a>
-                                            <a href="#">Мастер-классы</a>
+                                            <a href="#">Предложение 1</a>
+                                            <a href="#">Предложение 2</a>
+                                            <a href="#">Предложение 3</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -585,9 +585,9 @@
                                             </p>
                                         </button>
                                         <div class="dropdown-content">
-                                            <a href="#">ИгроМИР</a>
-                                            <a href="#">Мероприятия</a>
-                                            <a href="#">Мастер-классы</a>
+                                            <a href="#">Подарочные наборы 1</a>
+                                            <a href="#">Подарочные наборы 2</a>
+                                            <a href="#">Подарочные наборы 3</a>
                                         </div>
                                     </div>
                                     <div class="dropdown">
@@ -676,9 +676,9 @@
                                             </p>
                                         </button>
                                         <div class="dropdown-content">
-                                            <a href="#">ИгроМИР</a>
-                                            <a href="#">Мероприятия</a>
-                                            <a href="#">Мастер-классы</a>
+                                            <a href="#">Бренд 1</a>
+                                            <a href="#">Бренд 2</a>
+                                            <a href="#">Бренд 3</a>
                                         </div>
                                     </div>
                                 </div>
