--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Tenor+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
             rel="stylesheet">
-        <title>Document</title>
+        <title>TZ</title>
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -275,10 +275,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="tab__сontent">Lorem,
-                                                ipsum</div>
-                                            <div class="tab__сontent">Lorem
-                                                ipsum</div>
+                                            <div class="tab__сontent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum qui earum quam eos molestias amet eligendi fuga, non reiciendis officia.</div>
+                                            <div class="tab__сontent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aliquid inventore impedit nihil voluptatum quis quas necessitatibus ad?</div>
                                         </div>
                                     </div>
                                 </div>
